--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,6 +11,10 @@
 
 			<button type="button" id="CallButtonId" class="btn btn-success">Ara!</button>
 
+
+				<button type="button" id="GetControlsButtonId" class="btn btn-primary"> Get Controls!</button>
+
+								<button type="button" id="LoginButtonId" class="btn btn-success"> Login!</button>
 		</div>
 	</div>
 
